--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
         <div>
             <h3>BEST 이용후기</h3>
             <ul>
-                <li>파리바게뜨 이용후기</li>
-                <li>파리바게뜨 이용후기</li>
-                <li>파리바게뜨 이용후기</li>
-                <li>파리바게뜨 이용후기</li>
-                <li>파리바게뜨 이용후기</li>
+                <li>파리바게뜨 이용후기<span>2022-08-09</span></li>
+                <li>파리바게뜨 이용후기<span>2022-08-09</span></li>
+                <li>파리바게뜨 이용후기<span>2022-08-09</span></li>
+                <li>파리바게뜨 이용후기<span>2022-08-09</span></li>
+                <li>파리바게뜨 이용후기<span>2022-08-09</span></li>
             </ul>
         </div>
         <div>
