--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 <body>
     <!--상단-->
     <div id="top_wrap">
+                   
         <div id="v_con">
             <video autoplay preload="auto" muted loop poster="images/video_freeview.jpg">
-                <source src="media/main_video.mp4" type="video/mp4">
+                <source src="media/main_video.mov" type="video/mov">
             </video>
+            <div class="over"></div>
+            <div class="patten"></div>
         </div>
 
         <header id="top">
             <div class="quick_wrap1">
                 <div class="quick_wrap2">
                     <div class="logo">
-                        <h1><a href="#"><img src="images/logo.png" alt="logo" width="148" height="60"></a></h1>
+                        <h1><a href="#"><img src="images/logo.png" alt="logo" width="138" height="50"></a></h1>
                     </div>
                     
                     <ul class="quick">
