--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <!--상단-->
     <div id="top_wrap">
-                   
+
         <div id="v_con">
             <video autoplay preload="auto" muted loop poster="images/video_freeview.jpg">
-                <source src="media/main_video.mov" type="video/mov">
+                <source src="media/main_video.mp4" type="video/mp4">
             </video>
             <div class="over"></div>
             <div class="patten"></div>
@@ -27,7 +27,7 @@
                     <div class="logo">
                         <h1><a href="#"><img src="images/logo.png" alt="logo" width="138" height="50"></a></h1>
                     </div>
-                    
+
                     <ul class="quick">
                         <li><a href="#">HOME</a></li>
                         <li><a href="#">로그인</a></li>
@@ -63,30 +63,30 @@
                 <p>Integrated</p>
                 <p>Rest Management</p>
                 <p>세스코 통합해충방제 솔루션<br>
-                전문가의 진단으로 1:1통합 맞춤방제 솔루션 제공</p>
+                    전문가의 진단으로 1:1통합 맞춤방제 솔루션 제공</p>
             </div>
             <!--contents_1-->
 
             <div id="main_top_2">
-               <div>
-                <ul>
-                    <li>세스코<br>가상체험</li>
-                    <li>놀라운<br>세스코 이야기</li>
-                    <li>우리집<br>위생체크</li>
-                    <li>가정집</li>
-                    <li>요식업체</li>
-                    <li>일반사업체</li>
-                    <li>소득증명서<br>출력</li>
-                    <li>서비스<br>리포트출력</li>
-                    <li>세스코<br>가입추천</li>
-                </ul>
+                <div>
+                    <ul>
+                        <li>세스코<br>가상체험</li>
+                        <li>놀라운<br>세스코 이야기</li>
+                        <li>우리집<br>위생체크</li>
+                        <li>가정집</li>
+                        <li>요식업체</li>
+                        <li>일반사업체</li>
+                        <li>소득증명서<br>출력</li>
+                        <li>서비스<br>리포트출력</li>
+                        <li>세스코<br>가입추천</li>
+                    </ul>
                 </div>
-                </div> 
             </div>
         </div>
+    </div>
 
 
-        <!--top-->
+    <!--top-->
 
 
 
@@ -96,49 +96,10 @@
 
 
     <div id="contents_01">
-        <div id="contents_01_left">
-            <h2>내게 맞는 <span>세스코 솔루션</span>을 확인해보세요</h2>
 
-
-            <label for="list1">1. 어디에서 피해를 봤나요</label><br>
-            <select id="list1">
-                <option value="step1">피해장소 선택</option>
-                <option value="가정집">가정집</option>
-                <option value="요식업 및 서비스업">요식업 및 서비스업</option>
-                <option value="판매 및 유통업">판매 및 유통업</option>
-                <option value="학교 및 교육시설">학교 및 교육시설</option>
-                <option value="의료시설">의료시설</option>
-                <option value="제조업">제조업</option>
-                <option value="숙박업">숙박업</option>
-                <option value="빌딩 및 공공기간">빌딩 및 공공기간</option>
-            </select>
-
-            <label for="list2">2. 피해분야</label><br>
-            <select id="list2">
-                <option value="step2">피해분야 선택</option>
-                <option value="개미">개미</option>
-                <option value="개미">바퀴</option>
-                <option value="개미">쥐</option>
-                <option value="개미">파리</option>
-                <option value="개미">나방</option>
-                <option value="개미">실내 공기오염</option>
-                <option value="개미">손살균</option>
-                <option value="개미">공간살균</option>
-                <option value="개미">화장실살균</option>
-                <option value="개미">화장실 변기세정</option>
-                <option value="개미">식품위생관리</option>
-                <option value="개미">쓰레기장 악취</option>
-            </select>
-            <ul>
-                <li>Step 1</li>
-                <li>Step 2</li>
-                <li>Step 3</li>
-                <li>결과</li>
-            </ul>
-        </div>
         <!--contents_01_left-->
 
-        <div id="contents_01_right">
+        <div id="contents_01_con">
             <div>
                 <h3>보행 해충 방제</h3>
                 <p>개미, 바퀴처럼 기어서 실내로 유입하는 해충 때문에 힘드신가요?</p>
@@ -156,9 +117,58 @@
                 <p>혼자 하기 힘든 식품 안전 관리 때문에 고민이시죠?</p>
             </div>
         </div>
-        <!--contents_01_right-->
     </div>
     <!--contents_01-->
+
+
+
+
+    <div id="contents_02_top">
+        <div id="contente2_1">
+            <div class="title">
+                <h2>내게 맞는 <em>세스코 솔루션</em>을<br>확인해보세요</h2>
+            </div>
+            <div class="con">
+                <label for="list1" class="no1">1. 어디에서 피해를 봤나요</label><br>
+                <select id="list1">
+                    <option value="step1">피해장소 선택</option>
+                    <option value="가정집">가정집</option>
+                    <option value="요식업 및 서비스업">요식업 및 서비스업</option>
+                    <option value="판매 및 유통업">판매 및 유통업</option>
+                    <option value="학교 및 교육시설">학교 및 교육시설</option>
+                    <option value="의료시설">의료시설</option>
+                    <option value="제조업">제조업</option>
+                    <option value="숙박업">숙박업</option>
+                    <option value="빌딩 및 공공기간">빌딩 및 공공기간</option>
+                </select>
+
+                <label for="list2" class="no2">2. 피해분야</label><br>
+                <select id="list2">
+                    <option value="step2">피해분야 선택</option>
+                    <option value="개미">개미</option>
+                    <option value="개미">바퀴</option>
+                    <option value="개미">쥐</option>
+                    <option value="개미">파리</option>
+                    <option value="개미">나방</option>
+                    <option value="개미">실내 공기오염</option>
+                    <option value="개미">손살균</option>
+                    <option value="개미">공간살균</option>
+                    <option value="개미">화장실살균</option>
+                    <option value="개미">화장실 변기세정</option>
+                    <option value="개미">식품위생관리</option>
+                    <option value="개미">쓰레기장 악취</option>
+                </select>
+                <ul class="result">
+                    <li>1. 피해장소 선택</li>
+                    <li>2. 피해분야 선택</li>
+                    <li>3. 해결 목적</li>
+                    <li>4. 맞춤 솔루션</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
 
     <div id="contents_02">
         <!--배너8개짜리-->
@@ -343,4 +353,6 @@
 
 
 
-</body></html>
+</body>
+
+</html>
