main css - one choice
상단 부분 #01영역 코딩

--- a/index.html
+++ b/index.html
@@ -28,30 +28,27 @@
                         <h1><a href="#"><img src="images/logo.png" alt="logo" width="138" height="50"></a></h1>
                     </div>
 
-                    <ul class="quick">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">로그인</a></li>
-                        <li><a href="#">회원가입</a></li>
-                        <li><a href="#">ID/PW찾기</a></li>
-                    </ul>
+                    <div class="main_menu">
+                        <ul class="quick">
+                            <li><a href="#">HOME</a></li>
+                            <li><a href="#">로그인</a></li>
+                            <li><a href="#">회원가입</a></li>
+                            <li><a href="#">ID/PW찾기</a></li>
+                        </ul>
+                        <nav id="main_navi">
+                            <ul>
+                                <li><a href="#">세스코</a></li>
+                                <li><a href="#">서비스</a></li>
+                                <li><a href="#">쇼핑</a></li>
+                                <li><a href="#">고객지원</a></li>
+                                <li><a href="#">세스코광장</a></li>
+                                <li><a href="#">마이세스코</a></li>
+                            </ul>
+
+                        </nav>
+                    </div>
                 </div>
             </div>
-
-            <div id="main_navi_wrap">
-                <nav id="main_navi">
-                    <ul>
-                        <li><a href="#">세스코</a></li>
-                        <li><a href="#">서비스</a></li>
-                        <li><a href="#">쇼핑</a></li>
-                        <li><a href="#">고객지원</a></li>
-                        <li><a href="#">세스코광장</a></li>
-                        <li><a href="#">마이세스코</a></li>
-                    </ul>
-
-                </nav>
-                <!--main_navi-->
-            </div>
-            <!--main_navi_wrap-->
         </header>
 
 
@@ -70,15 +67,15 @@
             <div id="main_top_2">
                 <div>
                     <ul>
-                        <li>세스코<br>가상체험</li>
-                        <li>놀라운<br>세스코 이야기</li>
-                        <li>우리집<br>위생체크</li>
-                        <li>가정집</li>
-                        <li>요식업체</li>
-                        <li>일반사업체</li>
-                        <li>소득증명서<br>출력</li>
-                        <li>서비스<br>리포트출력</li>
-                        <li>세스코<br>가입추천</li>
+                        <li><a href="a">세스코<br>가상체험</a></li>
+                        <li><a href="a">놀라운<br>세스코 이야기</a></li>
+                        <li><a href="a">우리집<br>위생체크</a></li>
+                        <li><a href="a">가정집</a></li>
+                        <li><a href="a">요식업체</a></li>
+                        <li><a href="a">일반사업체</a></li>
+                        <li><a href="a">소득증명서<br>출력</a></li>
+                        <li><a href="a">서비스<br>리포트출력</a></li>
+                        <li><a href="a">세스코<br>가입추천</a></li>
                     </ul>
                 </div>
             </div>
@@ -100,21 +97,26 @@
         <!--contents_01_left-->
 
         <div id="contents_01_con">
+           <h2>세스코 대표서비스 한 눈에 찾기</h2>
             <div>
                 <h3>보행 해충 방제</h3>
                 <p>개미, 바퀴처럼 기어서 실내로 유입하는 해충 때문에 힘드신가요?</p>
+                <em>자세히 보기</em>
             </div>
             <div>
                 <h3>비래해충 방제</h3>
                 <p>파리, 나방처럼 실내로 유입하는 해충 때문에 신경쓰이시죠?</p>
+                <em>자세히 보기</em>
             </div>
             <div>
                 <h3>바이러스/박테리아</h3>
                 <p>눈에 보이지 않는 바이러스, 박테리아 때문에 고민이시죠?</p>
+                <em>자세히 보기</em>
             </div>
             <div>
                 <h3>식품안전</h3>
                 <p>혼자 하기 힘든 식품 안전 관리 때문에 고민이시죠?</p>
+                <em>자세히 보기</em>
             </div>
         </div>
     </div>
@@ -353,6 +355,4 @@
 
 
 
-</body>
-
-</html>
+</body></html>
