main - css 레이아웃 구성
레이아웃 자체는 완료.
이 외 간격이나 위치 조정 등 디테일 작업 필요.

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <div id="main_top_2">
                 <div>
                     <ul>
-                        <li><a href="a">세스코<br>가상체험</a></li>
-                        <li><a href="a">놀라운<br>세스코 이야기</a></li>
-                        <li><a href="a">우리집<br>위생체크</a></li>
+                        <li><a href="a">무료방문<br>상담신청</a></li>
+                        <li><a href="a">견적<br>상담신청</a></li>
+                        <li><a href="a">즉시계약<br>신청</a></li>
                         <li><a href="a">가정집</a></li>
                         <li><a href="a">요식업체</a></li>
                         <li><a href="a">일반사업체</a></li>
@@ -85,19 +85,48 @@
 
     <!--top-->
 
+    <div id="contents_00">
+    <h2 class="menu_title">대한민국 1위 생활환경 위생기업
+        </h2>
+    <ul>
+        <li>
+        
+        </li>
+    </ul>
+
+
+
+
+    </div>
 
 
 
 
 
+
+
+<!--contents_01-->
 
 
     <div id="contents_01">
 
-        <!--contents_01_left-->
 
-        <div id="contents_01_con">
-           <h2>세스코 대표서비스 한 눈에 찾기</h2>
+
+        <h2 class="menu_title">VIRTUAL <span>EXPERIENCE</span>
+            <p>세스코의 토털위생프로그램을 미리 체험해보실 수 있습니다.</p>
+        </h2>
+
+
+
+
+        <div id="contents_01_con1">
+            <div>
+                <img src="images/safe_vedio_img.jpg" alt="safe" width="846" height="552">
+            </div>
+
+        </div>
+
+        <div id="contents_01_con2">
             <div>
                 <h3>보행 해충 방제</h3>
                 <p>개미, 바퀴처럼 기어서 실내로 유입하는 해충 때문에 힘드신가요?</p>
@@ -215,7 +244,7 @@
 
 
     <div id="contents_03">
-        <h2>세스코 이용후기</h2>
+        <h2 class="menu_title">세스코 이용후기</h2>
         <div id="contents_03_review">
 
             <div id="contents_03_review_con">
