--- a/index.html
+++ b/index.html
@@ -86,11 +86,23 @@
     <!--top-->
 
     <div id="contents_00">
-    <h2 class="menu_title">대한민국 1위 생활환경 위생기업
-        </h2>
+    
+    <h2 class="menu_title">대한민국 <i>N0.1</i> 생활환경 위생기업</h2>
     <ul>
         <li>
-        
+            <h4>브랜드 파워</h4>
+            <span>9<em>/10</em></span>
+            <p>10명 중 9명이 아는 파워 브랜드</p>
+        </li>
+        <li>
+            <h4>고객의 신뢰도</h4>
+            <span>350,000<em> 명</em></span>
+            <p>세스코 멤버스존 고객 35만명</p>
+        </li>
+        <li>
+            <h4>세계 최대 위생 인프라</h4>
+            <span>50,160,000<em> 건</em></span>
+            <p>지속적인 토털위생 솔루션 개발 및 적용</p>
         </li>
     </ul>
 
