이메일 항목수정

--- a/cesco/sign_up.html
+++ b/cesco/sign_up.html
@@ -82,7 +82,7 @@
                 <p><input type="password" placeholder="비밀번호 확인"></p>
                 <p>두개의 비밀번호가 일치하지않습니다</p>
                 <p><input type="text" placeholder="이름(실명입력)"></p>
-                <p><input type="text" placeholder="이메일 계정">@<input type="text" placeholder="계정"></p>
+                <p><input type="text" placeholder="이메일">@<input type="text" placeholder="계정"></p>
 
                 <div>
                     <table class="sign_info">
