서브페이지 추가 및 이미지 작업
본문 안에 들어갈 이미지 추가작업 및 구성 레이아웃 수정

--- a/cesco/sign_up.html
+++ b/cesco/sign_up.html
@@ -73,10 +73,11 @@
     <!--컨텐츠시작-->
     <div id="sign_up">
         <div id="sign_up_box">
-            <h4>회원가입</h4>
+            
             <div class="u_sign">
-                <p><input type="text" placeholder="아이디 입력" id="input_text"></p>
-                <p><input type="button" value="중복확인" class="sign_bth_ok"></p>
+               <h4>회원가입</h4>
+                <p><input type="text" placeholder="아이디 입력" id="input_text"><input type="button" value="중복확인" class="sign_bth_ok"></p>
+                
                 <p><input type="password" placeholder="비밀번호 입력"></p>
                 <p><input type="password" placeholder="비밀번호 확인"></p>
                 <p>8~16자의 영문/숫자를 조합하여 입력</p>
@@ -85,7 +86,7 @@
 
                 <div class="u_sign_info">
                     <table class="sign_info">
-                        <caption>개인정보 수집·이용에 대한 안내</caption>
+                        <caption><h5>개인정보 수집·이용에 대한 안내</h5></caption>
                         <tr>
                             <th>이용목적</th>
                             <th>수집항목</th>
