--- a/index.html
+++ b/index.html
@@ -263,21 +263,21 @@
                 <div id="best_review">
                     <h3>BEST 이용후기</h3>
                     <ul>
-                        <li><img src="images/borad_icon_1.png" alt="new" width="20" height="20">파리바게뜨 이용후기<span>2022-08-09</span></li>
-                        <li>세스코를 만난 후 평화를 얻었다_서비스 상세후기<span>2022-08-09</span></li>
-                        <li>직원분의 서비스에 감동받았습니다~<span>2022-08-09</span></li>
-                        <li>세스코 이용한지 2년이 넘었는데 진짜 너무 좋아요<span>2022-08-09</span></li>
-                        <li>친절한 서비스! 정확한 점검! ^^ 선택에 후회없습니다. <span>2022-08-09</span></li>
+                        <li><em>No.272</em><img src="images/borad_icon_1.png" alt="new" width="20" height="20">파리바게뜨 이용후기<span>2022-08-09</span></li>
+                        <li><em>No.272</em>세스코를 만난 후 평화를 얻었다_서비스 상세후기<span>2022-08-09</span></li>
+                        <li><em>No.272</em>직원분의 서비스에 감동받았습니다~<span>2022-08-09</span></li>
+                        <li><em>No.272</em>세스코 이용한지 2년이 넘었는데 진짜 너무 좋아요<span>2022-08-09</span></li>
+                        <li><em>No.272</em>친절한 서비스! 정확한 점검! ^^ 선택에 후회없습니다. <span>2022-08-09</span></li>
                     </ul>
                 </div>
                 <div id="compliment_review">
                     <h3>칭찬합니다</h3>
                     <ul>
                         <li><em>No.272</em>강제경 컨설턴트님 감사합니다.<span>2022-08-09</span></li>
-                        <li>의정부지사 김성환기사님을 칭찬하고싶습니다~~<span>2022-08-09</span></li>
-                        <li>용산지사 김동현 SC님! 감사드립니다!<span>2022-08-09</span></li>
-                        <li>번개맨 세스코 감사합니다^^ <span>2022-08-09</span></li>
-                        <li>강제경 컨설턴트님 감사합니다!!!<span>2022-08-09</span></li>
+                        <li><em>No.272</em>의정부지사 김성환기사님을 칭찬하고싶습니다~~<span>2022-08-09</span></li>
+                        <li><em>No.272</em>용산지사 김동현 SC님! 감사드립니다!<span>2022-08-09</span></li>
+                        <li><em>No.272</em>번개맨 세스코 감사합니다^^ <span>2022-08-09</span></li>
+                        <li><em>No.272</em>강제경 컨설턴트님 감사합니다!!!<span>2022-08-09</span></li>
                     </ul>
                 </div>
             </div>
