--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
         </li>
         <li>
             <h4>고객의 신뢰도</h4>
-            <span>350,000<em> 명</em></span>
+            <span class="memberCountCon1">0</span>
             <p>세스코 멤버스존 고객 35만명</p>
         </li>
         <li>
             <h4>세계 최대 위생 인프라</h4>
-            <span>50,160,000<em> 건</em></span>
+            <span class="memberCountCon2">0</span>
             <p>지속적인 토털위생 솔루션 개발 및 적용</p>
         </li>
     </ul>
