index - 컨텐츠 3번 영역
'내게 맞는 세스코 솔루션을 확인해보세요' 
- option 선택으로 value값에 맞는 이미지로 변경되는 js 삽입.
- 나머지 이미지 작업중이며, 이 후 선택에 따라서 링크href가 바뀌는 버튼 작성하여 각 항목에 맞는 페이지 이동 기능 추가예정. 
- 아래 8개 배너 영역 동적 css 구상혜야함

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>Integrated</p>
                 <p>Rest Management</p>
                 <p>세스코 통합해충방제 솔루션<br>
-                    전문가의 진s단으로 1:1통합 맞춤방제 솔루션 제공</p>
+                    전문가의 진단으로 1:1통합 맞춤방제 솔루션 제공</p>
             </div>
             <!--contents_1-->
 
@@ -190,9 +190,9 @@
             <div class="con">
 
                 <select id="list1">
-                    <option value="step1">피해장소 선택</option>
-                    <option value="가정집">가정집</option>
-                    <option value="요식업 및 서비스업">요식업 및 서비스업</option>
+                    <option value="images/list1_00.png">피해장소 선택</option>
+                    <option value="images/list1_01.png">가정집</option>
+                    <option value="images/list1_02.png">요식업 및 서비스업</option>
                     <option value="판매 및 유통업">판매 및 유통업</option>
                     <option value="학교 및 교육시설">학교 및 교육시설</option>
                     <option value="의료시설">의료시설</option>
@@ -203,25 +203,25 @@
 
               
                 <select id="list2">
-                    <option value="step2">피해분야 선택</option>
+                    <option value="images/list2_00.png">피해분야 선택</option>
                     <option value="개미">개미</option>
-                    <option value="개미">바퀴</option>
-                    <option value="개미">쥐</option>
-                    <option value="개미">파리</option>
-                    <option value="개미">나방</option>
-                    <option value="개미">실내 공기오염</option>
-                    <option value="개미">손살균</option>
-                    <option value="개미">공간살균</option>
-                    <option value="개미">화장실살균</option>
-                    <option value="개미">화장실 변기세정</option>
-                    <option value="개미">식품위생관리</option>
-                    <option value="개미">쓰레기장 악취</option>
+                    <option value="바퀴">바퀴</option>
+                    <option value="images/list2_03.png">쥐</option>
+                    <option value="파리">파리</option>
+                    <option value="나방">나방</option>
+                    <option value="실내 공기오염">실내 공기오염</option>
+                    <option value="손살균">손살균</option>
+                    <option value="공간살균">공간살균</option>
+                    <option value="화장실살균">화장실살균</option>
+                    <option value="화장실 변기세정">화장실 변기세정</option>
+                    <option value="식품위생관리">식품위생관리</option>
+                    <option value="쓰레기장 악취">쓰레기장 악취</option>
                 </select>
                 <ul class="result">
-                    <li>1. 피해장소 선택</li>
-                    <li>2. 피해분야 선택</li>
-                    <li>3. 해결 목적</li>
-                    <li>4. 맞춤 솔루션</li>
+                    <li><p class="list1_img"><img src="images/list1_00.PNG" alt="#" width="200" height="60"></p></li>
+                    
+                    <li><p class="list2_img"><img src="images/list2_00.PNG" alt="#" width="200" height="60"></p></li>
+                    </li>
                 </ul>
             </div>
         </div>
