index 숫자 카운터, 제이쿼리 수정
- 메인에 뜨는 숫자 카운터 부분, 제이쿼리 수정

--- a/index.html
+++ b/index.html
@@ -162,24 +162,20 @@
     <ul>
         <li>
             <h4>브랜드 파워</h4>
-            <span>9<em>/10</em></span>
+            <span class="counter" data-count="9">0</span><em>/10</em>
             <p>10명 중 9명이 아는 파워 브랜드</p>
         </li>
         <li>
             <h4>고객의 신뢰도</h4>
-            <span class="memberCountCon1">0</span>
+            <span class="counter" data-count="350000">0</span>
             <p>세스코 멤버스존 고객 35만명</p>
         </li>
         <li>
             <h4>세계 최대 위생 인프라</h4>
-            <span class="memberCountCon2">0</span>
+            <span class="counter" data-count="50160000">0</span>
             <p>지속적인 토털위생 솔루션 개발 및 적용</p>
         </li>
     </ul>
-
-
-
-
     </div>
 
 
