sub css 이미지 경로수정
logo, footer img 절대경로로 바꿔줌

--- a/cesco/login.html
+++ b/cesco/login.html
@@ -24,7 +24,7 @@
             <div class="quick_wrap1">
                 <div class="quick_wrap2">
                     <div class="logo">
-                        <h1><a href="#"><img src="../../images/logo.png" alt="logo" width="138" height="50"></a></h1>
+                        <h1><a href="#"><img src="http://hohk.dothome.co.kr/hsy/images/logo.png" alt="logo" width="138" height="50"></a></h1>
                     </div>
 
                     <div class="main_menu">
@@ -54,8 +54,8 @@
             <nav id="sub_navi">
                 <ul>
                     <li><a href="#">home</a></li>
-                    <li><a href="#">마이세스코</a><span><img src="../../images/sub_menu_icon1.jpg" alt="#"></span></li>
-                    <li><a href="#">회원 로그인</a><span><img src="../../images/sub_menu_icon1.jpg" alt="#"></span></li>
+                    <li><a href="#">마이세스코</a><span><img src="http://hohk.dothome.co.kr/hsy/images/sub_menu_icon1.jpg" alt="#"></span></li>
+                    <li><a href="#">회원 로그인</a><span><img src="http://hohk.dothome.co.kr/hsy/images/sub_menu_icon1.jpg" alt="#"></span></li>
                     <li></li>
                     <li>01</li>
                     <li>02</li>
@@ -74,8 +74,6 @@
     <div id="login">
         <div id="login_box">
             <div class="login_box_left">
-
-
                 <h4>회원 로그인</h4>
                 <p>가입하신 계정으로 로그인 바랍니다.</p>
                 <p class="u_id"><input type="text" placeholder="아이디 입력"></p>
@@ -123,7 +121,7 @@
     <div id="bottom_wrap">
         <footer id="bottom">
             <div class="ft_left">
-                <p class="ft_logo"><img src="../../images/logo.png" alt="#" width="80" height="36"></p>
+                <p class="ft_logo"><img src="http://hohk.dothome.co.kr/hsy/images/logo.png" alt="#" width="80" height="36"></p>
                 <h3>고객센터</h3>
                 <p>1588-1119</p>
                 <p>평일 08:30 ~ 18:00<br>토요일 08:30 ~ 15:00<br>일요일/공휴일 휴무</p>
