--- a/index.html
+++ b/index.html
@@ -162,17 +162,17 @@
     <ul>
         <li>
             <h4>브랜드 파워</h4>
-            <span class="counter" data-count="9">0</span><em>/10</em>
+            <span class="counter1" data-count="9">0</span><em>/10</em>
             <p>10명 중 9명이 아는 파워 브랜드</p>
         </li>
         <li>
             <h4>고객의 신뢰도</h4>
-            <span class="counter" data-count="350000">0</span>
+            <span class="counter2" data-count="350000">0</span>
             <p>세스코 멤버스존 고객 35만명</p>
         </li>
         <li>
             <h4>세계 최대 위생 인프라</h4>
-            <span class="counter" data-count="50160000">0</span>
+            <span class="counter3" data-count="50160000">0</span>
             <p>지속적인 토털위생 솔루션 개발 및 적용</p>
         </li>
     </ul>
@@ -358,7 +358,7 @@
                     <h3>칭찬합니다</h3>
                     <ul>
                         <li><em>No.105</em><img src="images/borad_icon_1.png" alt="new" width="20" height="20">강제경 컨설턴트님 감사합니다.<span>2022-08-09</span></li>
-                        <li><em>No.104</em><img src="images/borad_icon_1.png" alt="new" width="20" height="20">의정부지사 김성환기사님을 칭찬하고싶습니다~~<span>2022-08-09</span></li>
+                        <li><em>No.104</em><img src="images/borad_icon_1.png" alt="new" width="20" height="20">의정부지사 김진환기사님을 칭찬하고싶습니다~~<span>2022-08-09</span></li>
                         <li><em>No.103</em>용산지사 김동현 SC님! 감사드립니다!<span>2022-08-09</span></li>
                         <li><em>No.102</em>번개맨 세스코 감사합니다^^ <span>2022-08-09</span></li>
                         <li><em>No.101</em>강제경 컨설턴트님 감사합니다!!!<span>2022-08-09</span></li>
