sub 페이지 네비게이션 수정
마우스오버시 상단 높이에 맞춰서 네비 버튼이 활성화 될 수 있도록 삽입 및 수정했다
메인이랑 간격이 달라져서 조금 신경쓰였는데 이동하면서 체크해보니 남들은 잘 모르는 미묘한 차이였기에 일단 네비게이션은 완성짓기로함^^

--- a/cesco/01introduce/summary.html
+++ b/cesco/01introduce/summary.html
@@ -3,7 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>세스코 통합해충방제솔루션 </title>
+    <title>세스코 통합해충방제솔루션</title>
+    <script src="../../js/jquery-3.6.0.min.js"></script>
+    <script src="../../js/jquery-1.12.4.min.js"></script> 
+    <script src="../../js/jquery.sliphover.min.js"></script>
+    <script src="../../js/main.js"></script>
+
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/top_sub.css">
     <link rel="stylesheet" href="../../css/sub.css">
@@ -22,35 +27,71 @@
             <div class="patten"></div>
         </div>
 
-        <header id="top">
-            <div class="quick_wrap1">
-                <div class="quick_wrap2">
-                    <div class="logo">
-                        <h1><a href="#"><img src="../../images/logo.png" alt="logo" width="138" height="50"></a></h1>
-                    </div>
 
-                    <div class="main_menu">
-                        <ul class="quick">
+<!--네비영역 시작-->
+<header id="top">
+            
+    <!--js추가위치-->
+    <nav id="main_navi">
+        <h1><a href="#"><img src="http://hohk.dothome.co.kr/hsy/images/logo.png" alt="#" width="138" height="50"></a></h1>
+        <ul id="menu">
+            <li><a href="#">세스코</a>
+                <ul class="sub">
+                    <li><a href="#">회사소개</a></li>
+                    <li><a href="#">세스코 경쟁력</a></li>
+                    <li><a href="#">오시는 길</a></li>
+                </ul>        
+            </li>
+            <li><a href="#">서비스</a>
+                <ul class="sub">
+                    <li><a href="#">통합해충방제</a></li>
+                    <li><a href="#">통합이물분석</a></li>
+                    <li><a href="#">항균안전 솔루션</a></li>
+                </ul>                    
+            </li>
+            <li><a href="#">쇼핑</a>
+                <ul class="sub">
+                    <li><a href="#">생활위생용품</a></li>
+                    <li><a href="#">공기살균기</a></li>
+                    <li><a href="#">공기청정기</a></li>
+                </ul>   
+            </li>
+            <li><a href="#">고객지원</a>
+                <ul class="sub">
+                    <li><a href="#">방문상담</a></li>
+                    <li><a href="#">체험신청</a></li>
+                    <li><a href="#">자주 찾는 질문</a></li>
+                    <li><a href="#">QNA</a></li>                            
+                </ul> 
+            </li>
+            <li><a href="#">세스코광장</a>
+                <ul class="sub">
+                    <li><a href="#">이용후기</a></li>
+                    <li><a href="#">칭찬합니다</a></li>
+                </ul>                     
+            </li>
+            <li><a href="#">마이세스코</a>
+                <ul class="sub">
+                    <li><a href="#">회원가입</a></li>
+                    <li><a href="#">회원정보관리</a></li>
+                </ul>                     
+            </li>
+        </ul>
+        <ul class="quick">
+            <li><a href="#">로그인</a></li>
+            <li><a href="#">회원가입</a></li>
+        </ul><!--quick-->
+    </nav>
+    
+</header><!--top-->
+ <!--네비영역 끝-->
 
-                            <li><a href="#">로그인</a></li>
-                            <li><a href="#">회원가입</a></li>
 
-                        </ul>
-                        <nav id="main_navi">
-                            <ul>
-                                <li><a href="#">세스코</a></li>
-                                <li><a href="#">서비스</a></li>
-                                <li><a href="#">쇼핑</a></li>
-                                <li><a href="#">고객지원</a></li>
-                                <li><a href="#">세스코광장</a></li>
-                                <li><a href="#">마이세스코</a></li>
-                            </ul>
 
-                        </nav>
-                    </div>
-                </div>
-            </div>
-        </header>
+
+
+
+
 
         <div id="sub_menu">
             <nav id="sub_navi">
