네비게이션 링크수정

--- a/cesco/login.html
+++ b/cesco/login.html
@@ -74,8 +74,8 @@
                     </li>
                 </ul>
                 <ul class="quick">
-                    <li><a href="#">로그인</a></li>
-                    <li><a href="#">회원가입</a></li>
+                    <li><a href="login.html">로그인</a></li>
+                    <li><a href="sign_up.html">회원가입</a></li>
                 </ul><!--quick-->
             </nav>
             
